frontend/test/should_fail/uniqueofObject.grg
using uniqueTestModelWithoutUniqueDeclarations;

rule t
{
	if { uniqueof(new Object())==42; }
	
	modify {
	}
}
